# VinReviewer

./: .dockerignore  .gitignore  4.0  README.md  docker-compose.yml  railway.json
BackEnd/: .env.example  Dockerfile  README.md  pyproject.toml
BackEnd/src/: __init__.py  compat.py  config.py  exceptions.py  main.py
BackEnd/src/mapping/: result.py  rubric.py
BackEnd/src/models/: __init__.py  requests.py  responses.py
BackEnd/src/routes/: evaluate.py  health.py  pdf.py
BackEnd/src/services/: evaluator.py  grobid_launcher.py  job_manager.py  supabase_client.py
BackEnd/src/workers/: pipeline_worker.py
BackEnd/tests/: conftest.py  test_e2e_pdf_evaluation.py  test_evaluator.py  test_job_manager.py  test_mapping.py  test_pdf_route.py  test_routes.py  test_workers.py
BackEnd/vinreviewer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
GradingSystem/: .env.example  .gitignore  README.md  pyproject.toml  random.txt
GradingSystem/configs/: feature_subset.yaml  red_lines.yaml  rubric_dimensions.yaml  rubric_dimensions_ellipse.yaml  venues.yaml
GradingSystem/data/reference_corpus/: baselines.json  calibration.json
GradingSystem/grading_system_src/: cli.py  config.py  llm.py  model_cache.py  prompts.py
GradingSystem/grading_system_src/agents/: critic.py  novelty.py  objective.py  retrieval.py  supervisor.py
GradingSystem/grading_system_src/calibration/: __init__.py  calibrator.py  comparative.py  perturbation.py
GradingSystem/grading_system_src/features/: citations.py  cohesion.py  diversity.py  mechanics.py  normalize.py  references.py  router.py  style.py
GradingSystem/grading_system_src/ingest/: __init__.py  docx_parser.py  (+4 more)
GradingSystem/prompts/: contribution_extraction.txt  evidence_critic.txt  keyword_extraction.txt  persona_communication.txt  persona_domain.txt  persona_methodology.txt  rebuttal.txt  review_synthesis.txt  rubric_system.txt
GradingSystem/src/: __init__.py  cli.py  exceptions.py  model_cache.py  models.py
GradingSystem/tests/: conftest.py  test_api_key.py  test_calibration.py  test_citations.py  test_cohesion.py  test_comparative.py  test_config.py  test_deliberation.py  test_diversity.py  test_docx_parser.py  test_grobid_parser.py  test_language.py  test_mechanics.py  test_missing_file.py  test_models.py  test_normalize.py  test_novelty.py  test_output.py  test_pdf_fallback.py  test_perturbation.py  test_phase_output.py  test_rebuttal.py  test_references.py  test_style.py  test_supervisor.py
(+165 files in other folders)
