[project]
name = "GradioAI-backend"
version = "0.1.0"
description = "FastAPI orchestration service bridging GradioAI FrontEnd and GradingSystem"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "supabase>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-s"
log_cli = true
log_cli_level = "INFO"
markers = [
    "e2e: mark test as end-to-end integration test (requires live Supabase + backend)",
]
