[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-reviewer"
version = "0.1.0"
description = "Multi-agent academic-writing reviewer pipeline"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.12",

    # Ingestion
    "python-docx>=1.1",
    "requests>=2.31",
    "fasttext-langdetect>=1.0",

    # NLP / Feature extraction
    "spacy>=3.7",
    "click<8.2.0",
    "sentence-transformers>=3.0",
    "peft>=0.10",
    "lexicalrichness>=0.5",
    "language-tool-python>=2.8",
    "linguaf>=0.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",

    # Resilience
    "tenacity>=8.2",

    # Storage / Config
    "pydantic>=2.6",
    "pyyaml>=6.0",

    # Output
    "jinja2>=3.1",
    "rich>=13.7",

    # CLI
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
agentic-reviewer = "grading_system_src.cli:main"
agentic-reviewer-rebut = "grading_system_src.cli:rebut"

[tool.setuptools.packages.find]
where = ["."]
include = ["grading_system_src*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
